[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distilphobert-baseline"
version = "0.1.0"
description = "Baseline knowledge distillation pipeline for PhoBERT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "accelerate",
  "scikit-learn",
  "wandb",
]

[tool.setuptools.packages.find]
include = ["distilphobert_baseline*"]